tests/paczka1/small_fuzzy/48805811.err
Error in line 9: kPx3x4 S10u 91,2
Error in line 11: uRC&kP5T S108 89,1
